--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ES6 Features",
   "main": "iterator.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha ./**/*.spec.js"
+    "test": "./node_modules/.bin/mocha ./**/*.spec.js ./**/**/*.spec.js"
   },
   "repository": {
     "type": "git",
